Bug 278353. GTK1 needs to fix the z-order of widgets after showing them, because showing them brings them to the top, perhaps undesirably. r+sr=blizzard, a=me